--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -132,6 +132,18 @@ services:
       interval: 1s
       timeout: 3s
       retries: 2
+  
+  jupyter:
+    container_name: pyspark-notebook
+    hostname: pyspark
+    image: jupyter/pyspark-notebook
+    tty: true
+    restart: unless-stopped
+    ports:
+      - "10000:8888/tcp"
+    networks:
+      hadoop_network:
+        ipv4_address: ${IP_NOTE}
 
 networks:
   hadoop_network:
