adicionado dados e arquivo main.ipynb

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -144,6 +144,9 @@ services:
     networks:
       hadoop_network:
         ipv4_address: ${IP_NOTE}
+    depends_on:
+      node:
+        condition: service_started
 
 networks:
   hadoop_network:
